codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permissions_selection_history_full_access_to_default.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 776
expression: "lines_to_single_string(&cells[0])"
---
• Permissions updated to Auto-review
