codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_permissions_selection_popup_with_custom_profiles.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 115
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions

› 1. Default (current)  Codex can read and edit files in the current
                        workspace, and run commands. Approval is required to
                        access the internet or edit other files.
  2. Auto-review        Same workspace-write permissions as Default, but
                        eligible `on-request` approvals are routed through the
                        auto-reviewer subagent.
  3. Full Access        Codex can edit files outside this workspace and access
                        the internet without asking for approval. Exercise
                        caution when using.

  Press enter to confirm or esc to go back
